Ajustes de Equipe

--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -11,6 +11,7 @@ pt-BR:
       administrator: Administrador
       supervisor: Supervisor
       seller: Vendedor
+  team_users: Equipe de Venda
   show: "Visualizar"
   edit: "Editar"
   delete: "Excluir"
