ajustes de usuario

--- a/config/locales/views.pt-BR.yml
+++ b/config/locales/views.pt-BR.yml
@@ -7,7 +7,7 @@ pt-BR:
     show:
       title: Dados do Usuário - %{resource}
     form:
-      permission: Permissão
+      permission: Selecione o tipo de usuário
       administrator: Administrador
       supervisor: Supervisor
       seller: Vendedor
